--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color:pink;
 }
 
 code {
@@ -15,12 +16,16 @@ code {
 
 .div{
   font-size: 1000px;
-  color: blueviolet;
+ 
 }
 
 button{
   margin: 5px;
   padding: 8px;
   color:gold;
+  text-align: center;
 }
 
+label{
+  text-align: top;
+}
